fix: hide overflow to remove white space in Partnerships and Staff pages

--- a/src/styles/StaffPage.css
+++ b/src/styles/StaffPage.css
@@ -2,6 +2,7 @@
   position: absolute;
   background-color: #eae7e1;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .staff-top-container {
